--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,9 @@ ATLAS_PASS = nOOy6EdFIhQsW81t
 DB_NAME = Hermes
 SERVER_PORT = 3300
 CLIENT_PORT = 3000
+ACCESS_TOKEN_SECRET = hkjh987123hknnljdkuq8129834bnbabhgbhjgf876q
+ACCESS_TOKEN_LIFETIME = 600
+REFRESH_TOKEN_SECRET = qnqszuy7612bjmnlakj90u12213knbjkbnzc09u120wz
+REFRESH_TOKEN_LIFETIME = 3600
+ISSUER = auth.hermes.pl
+AUDIENCE = hermes.pl
