--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^19.8.8",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
@@ -22,6 +24,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.2.1",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
