--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"cd server && nodemon\" \"cd client && npm start\" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "concurrently \"cd client && npm start\" \"cd server && nodemon\""
   },
   "repository": {
     "type": "git",
