--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^19.8.8",
+    "jodit-react": "^1.0.74",
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
@@ -26,6 +27,7 @@
     "react-scripts": "4.0.1",
     "react-select": "^4.2.1",
     "redux": "^4.0.5",
+    "sanitize-html": "^2.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
