--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "hermes",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3300",
+  "proxy": "78.46.150.191:3000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
